translation-tool/inputs/source_meta/objects/CaseAPIFieldMapper__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Additional_Transformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Transformation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <label>Attribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Field_API_Name__c</fullName>
        <label>Case Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enumerable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enumerable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_On_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate On Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_On_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate On Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Multiple_External_Ids__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been introduced for Account object and can be used in any scenario where there is no unique External Id record.However, depending on a String value, usually type of the record, one can determine which external Id field to query for that type of record.</description>
        <inlineHelpText>Check this checkbox only if more than one externalIds are possible for this SObject based on type field present in the corresponding complex type determinant.</inlineHelpText>
        <label>Has Multiple External Ids</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LookupEntity__c</fullName>
        <label>LookupEntity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <label>Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestParam__c</fullName>
        <label>RequestParam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Complex_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Complex Type?</label>
        <type>Checkbox</type>
    </fields>
    <label>CaseAPIFieldMapper</label>
</CustomObject>